--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">This is CTKS2</h2>
-                        <p class="about__text">Pin ngor, khg, and rok rg lek 1</p>           
+                        <h2 class="about__subtitle"></h2>
+                        <p class="about__text"></p>           
                     </div>                                   
                 </div>
             </section>
